# scouting-ipp

./: .gitignore  LICENSE  README.md  dependencies_https.rosinstall  dependencies_ssh.rosinstall  install_local.md  mav_active_3d_planning.patch
advanced_planner_modules/: CMakeLists.txt  package.xml
advanced_planner_modules/include/planner_modules_planexp/cost_computer/: cost_planexp_map_integral.h
advanced_planner_modules/include/planner_modules_planexp/evaluator_updater/: rrt_star_updater.h  update_all_non_terminal.h
advanced_planner_modules/include/planner_modules_planexp/initialization/: planexp_package.h
advanced_planner_modules/include/planner_modules_planexp/map/: map_planexp.h
advanced_planner_modules/include/planner_modules_planexp/sensor_model/: camera_model_planexp.h  sensor_model_planexp.h
advanced_planner_modules/include/planner_modules_planexp/trajectory_evaluator/: average_view_cost_evaluator.h  combined_evaluator.h  expand_low_cost_area_evaluator.h  expand_reachable_area_evaluator.h  goal_distance_evaluator.h  rrt_star_evaluator.h
advanced_planner_modules/src/cost_computer/: cost_planexp_map_integral.cpp
advanced_planner_modules/src/evaluator_updater/: rrt_star_updater.cpp  update_all_non_terminal.cpp
advanced_planner_modules/src/initialization/: planexp_package.cpp
advanced_planner_modules/src/map/: map_planexp.cpp
advanced_planner_modules/src/sensor_model/: camera_model_planexp.cpp  sensor_model_planexp.cpp
advanced_planner_modules/src/trajectory_evaluator/: average_view_cost_evaluator.cpp  combined_evaluator.cpp  expand_low_cost_area_evaluator.cpp  expand_reachable_area_evaluator.cpp  goal_distance_evaluator.cpp  rrt_star_evaluator.cpp
advanced_planner_msgs/: CMakeLists.txt  package.xml
advanced_planner_msgs/msg/: MapData.msg  PlannerStatus.msg
advanced_planner_msgs/srv/: ExplorableArea.srv  ExploredArea.srv  PathCost.srv
advanced_planner_ros/: CMakeLists.txt  package.xml
advanced_planner_ros/cfg/evaluators/: average_view_cost.yaml  baseline.yaml  expand_low_cost_area.yaml  expand_reachable_area.yaml  goal_distance.yaml  naive.yaml  rrt_star.yaml  rrt_star_binary.yaml  rrt_star_heuristic.yaml  rrt_star_heuristic_2.yaml
advanced_planner_ros/cfg/experiments/: example.yaml
advanced_planner_ros/cfg/planners/: example_config.yaml
advanced_planner_ros/cfg/visualization/: 30x40_planner.rviz
advanced_planner_ros/include/ros_planner_planexp/: ros_planner_planexp.h
advanced_planner_ros/launch/: example.launch  run_ipp_2d.launch
advanced_planner_ros/scripts/: run_experiment.sh
advanced_planner_ros/src/: experiment_manager.py  ros_planner_planexp.cpp  ros_planner_planexp_node.cpp
data_analysis/: evaluation.py  exp_data_classes.py  performance.py  performance_metric_comparison.py  performance_metrics.py  plot_comparison.py  plotting.py  plotting_functions.py  timing_table.py
docker/: scouting_ipp.Dockerfile
docker/data/maps/cfg/: map_102.yaml  map_110.yaml  map_111.yaml  map_112.yaml  map_113.yaml  map_115.yaml  map_116.yaml  map_122.yaml  map_212.yaml  map_312.yaml  map_312_bounds.yaml
docker/data/maps/height/: height_100.exr  height_200.exr  height_300.exr
docker/data/maps/visualization/: range.yaml
helper_scripts/: README.md  analyse_map.py  check_map.py  compute_baseline_performance.py  create_artificial_maps.py  create_config_space_map.py  create_derivative_height_maps.py  create_map_config.py  create_map_visualization.py  create_maps.py  create_path_animation.py  depth_image_converter.py  extract_obstacles.py  label_replacer.py  map_conversion_functions.py  oaisys_image_gen.py  plot_legend.py  report_functions.py  visualization_dirty.py  visualize_rrt_star_evaluator_path.py
map_server_planexp/: CMakeLists.txt  package.xml
map_server_planexp/include/map_server_planexp/: eigen_csv.h  grid_map_helpers.h  map_server_planexp.h
map_server_planexp/launch/: test.launch
map_server_planexp/src/: map_server_planexp.cpp  map_server_planexp_node.cpp
mav_simulator/: CMakeLists.txt  package.xml
mav_simulator/include/mav_simulator/: conversions.h  mav_simulator.h  opencv_helpers.h  types.h
mav_simulator/launch/: mav_simulator.launch
mav_simulator/src/: mav_simulator.cpp  mav_simulator_node.cpp
planexp_base_planners/: CMakeLists.txt  package.xml
planexp_base_planners/cfg/: rrt_star_config.yaml
planexp_base_planners/include/planexp_base_planners/: base_planner.h  planexp_base_planners.h  prm_star_planner.h  rrt_star_ompl_base.h  rrt_star_planner.h
planexp_base_planners/include/planexp_base_planners/common/: arg_parser.h  drawing_helper.h  types.h  utils.h
planexp_base_planners/launch/: prm_star.launch  rrt_star.launch
planexp_base_planners/src/: planexp_base_planner_node.cpp  planexp_eval_planner.cpp  prm_star_planner.cpp  rrt_star_ompl_base.cpp  rrt_star_planner.cpp
