<?xml version="1.0"?>
<package format="2">
  <name>planexp_msgs</name>
  <version>0.0.0</version>
  <description>Message definitions for communicating with scouting IPP maps.</description>

  <maintainer email="friedrich.rockenbauer@gmail.com">Friedrich M. Rockenbauer</maintainer>

  <author>Friedrich M. Rockenbauer</author>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

  <depend>message_generation</depend>
  <depend>message_runtime</depend>
  <depend>std_msgs</depend>
  <depend>trajectory_msgs</depend>
  <depend>eigen_catkin</depend>
  <depend>geometry_msgs</depend>
</package>
