<?xml version="1.0"?>
<package format="2">
    <name>ros_planner_planexp</name>
    <version>0.0.0</version>
    <description>ROS planner representations for scouting IPP.</description>

    <author email="friedrich.rockenbauer@gmail.com">Friedrich M. Rockenbauer</author>

    <maintainer email="friedrich.rockenbauer@gmail.com">Friedrich M. Rockenbauer</maintainer>

    <license>MIT</license>

    <buildtool_depend>catkin</buildtool_depend>
    <buildtool_depend>catkin_simple</buildtool_depend>

    <depend>active_3d_planning_core</depend>
    <depend>active_3d_planning_ros</depend>
    <depend>active_3d_planning_mav</depend>
    <depend>planner_modules_planexp</depend>
    <depend>roscpp</depend>
    <depend>rospy</depend>
    <depend>trajectory_msgs</depend>
    <depend>mav_msgs</depend>
    <depend>std_msgs</depend>
    <depend>sensor_msgs</depend>
    <depend>geometry_msgs</depend>
    <depend>nav_msgs</depend>
</package>
